  * Moved the SDF module out of SessionSchedules and into lsl.common
  * Added functions to generate the TBN and DRX filter magnitude response
  * Added versions of the spectra plotters, the correlations, and the stand plotters that use MCS meta-data bundles
  * Added a basic SSMIF file for the north arm site (LWA-2)
  * Added a preliminary module for incoherent dedispersion

0.4.4
  * Added an id number attribute to lsl.common.stations.FEE objects
  * Updated LWA-1 SSMIF to 2011-08-10 version
  * Added `keep` option to tbnSpectra.py to only display a certain collection of stands
  * Possibly cleared up a install problem on some systems that prevents testing
  * Fixed various memory leaks in the readers and the direct DRSU access module
  * Added `documentation support` for accessing the central frequency of a TBN frame
  * Added support for variable noise level in the various lsl.sim.dp functions
  * Worked on improving ATLAS library detection on Redhat-based distributions
  * Improved detection of potential build problems with the DRSU direct-access extension
  * Updated the coordinates of stand #148 to be consistent with the revised LWA-1 survey
  * Fixed the digitizer to board mapping to account for DP2 boards

0.4.3
  * Cleaned up the various __init__.py scripts
  * Fixed a few typos in lsl.correlator.uvUtils
  * Fixed a typo in the progress bar caused some decrements to increment
  * Fixed a few typos in lsl.correlator.uvUtils.computeUVTrack
  * Fixed a typo in the _spec.PPSDC2() function that caused it to die
  * Fixed several heinous problems in sim.dp.pointSource()
  * Fixed a bug with indexing in the 4-bit TBW reader
  * Fixed a few sign errors in correlator _core and uvUtils modules
  * Fixed a bug in the correlateTBW script related to antenna indexing
  * Fixed a bug in the FITS IDI writer that caused EOP problems to be fatal

0.4.2
  * Fixed tbwSpectra.py to skip over non-TBW frames at the beginning of a TBW file