@@ -9,7 +9,8 @@
   * Added functions to generate the TBN and DRX filter magnitude response
   * Added versions of the spectra plotters, the correlations, and the stand plotters that use MCS meta-data bundles
   * Added a basic SSMIF file for the north arm site (LWA-2)
-  * Added a preliminary module for incoherent dedispersion
+  * Added a preliminary module for incoherent dedispersion lsl.misc.dedispersion
+  * Added support for spectral kurtosis via lsl.statistics.kurtosis
 
 0.4.4
   * Added an id number attribute to lsl.common.stations.FEE objects
@@ -23,6 +24,8 @@
   * Improved detection of potential build problems with the DRSU direct-access extension
   * Updated the coordinates of stand #148 to be consistent with the revised LWA-1 survey
   * Fixed the digitizer to board mapping to account for DP2 boards
+  * Fixed a bug simulating visibilities that could include sources below the horizon
+  * Fixed the `-i` option in gsmnpz2map.py
 
 0.4.3
   * Cleaned up the various __init__.py scripts
